mv BUILD.config.bzl to config/CONFIG.bzl, fix compile mode stuff
* put boot targets in //boot/bin, //boot/lib
* start revising targets to use new vars in config/CONFIG.bzl
* add DEBUG_TRACE to runtime/interp.c
* integrate bazel compilation_mode and ocaml debugging configs

--- a/bin/BUILD.bazel
+++ b/bin/BUILD.bazel
@@ -6,7 +6,7 @@ load("//bzl:rules.bzl",
 )
 
 #FIXME: clean these up!
-load("//config:BUILD.bzl",
+load("//config:CONFIG.bzl",
      "ARCH", "MODEL", "SYSTEM",
      "HOST", "ROOTDIR", "LIBDIR",
      # flags
@@ -23,7 +23,7 @@ load("//config:BUILD.bzl",
 
 exports_files(["Makefile.config", "VERSION"])
 
-load("//config:BUILD.bzl",
+load("//config:CONFIG.bzl",
      "USE_PRIMS", "DATA_PRIMS",
      "PRIMITIVES"
      )
