--- a/file_formats/BUILD.bazel
+++ b/file_formats/BUILD.bazel
@@ -4,7 +4,7 @@ load("//bzl:rules.bzl",
      "bootstrap_library",
 )
 
-load("//config:BUILD.bzl", "ROOT_MODULE_OPTS", "ROOT_SIG_OPTS")
+load("//config:CONFIG.bzl", "ROOT_MODULE_OPTS", "ROOT_SIG_OPTS")
 
 MODULE_OPTS = ROOT_MODULE_OPTS
 SIG_OPTS = ROOT_SIG_OPTS
