--- a/bytecomp/BUILD.bazel
+++ b/bytecomp/BUILD.bazel
@@ -5,7 +5,7 @@ load("//bzl:rules.bzl",
      "bootstrap_signature",
 )
 
-load("//config:BUILD.bzl",
+load("//config:CONFIG.bzl",
      "RUNTIME_OCAMLRUN",
      "ROOT_MODULE_OPTS",
      "ROOT_SIG_OPTS")
