--- a/config/CONFIG.bzl.in
+++ b/config/CONFIG.bzl.in
@@ -45,8 +45,168 @@ OCAML_VERSION_EXTRA = "@OCAML_VERSION_EXTRA@"
 # The notes below ignore uses of flags etc. to compute dependencies,
 # since they're not need under Bazel.
 
+############# Configuration for the native-code compiler
+
+### Whether the native compiler has been enabled or not
+NATIVE_COMPILER = "@native_compiler@" == "true"
+
+### Name of architecture for the native-code compiler
+### Currently supported:
+###
+### i386        Intel Pentium PCs under Linux, *BSD*, NextStep
+### power       Macintosh under Mac OS X and Linux
+### arm         ARM under Linux
+###
+### Set ARCH=none if your machine is not supported
+ARCH = "@arch@"
+
+# Whether the architecture has 64 bits
+ARCH64 = "@arch64@" == "true"
+
+# Endianness for this architecture
+ENDIANNESS = "@endianness@"
+
+### Name of architecture model for the native-code compiler.
+### Some architectures come in several slightly different flavors
+### that share a common code generator. This variable tailors the
+### behavior of the code generator to the particular flavor used.
+### Currently needed only if ARCH=power; leave MODEL=default for
+### other architectures.
+### If ARCH=power: set MODEL=ppc
+### For other architectures: leave MODEL=default
+###
+MODEL = "@model@"
+
+### Name of operating system family for the native-code compiler.
+SYSTEM = "@system@"
+
+TARGET = "@target@"
+HOST = "@host@"
+
+### Set to "true" to install ".byte" executables (ocamlc.byte, etc.)
+INSTALL_BYTECODE_PROGRAMS = "@install_bytecode_programs@" == "true"
+
 ################################################################
-###  C Builds
+#### Commands
+## C builds cmds:
+
+## OCaml build cmds:
+
+## An unholy mess. The legacy makefiles use no fewer than nine cmd
+## variables just for compiling: BOOT_OCAMLC, COMPILER, OPTCOMPILER,
+## CAMLC, OCAMLC, CAMLOPT, OCAMLOPT, BEST_OCAMLC, and BEST_OCAMLOPT.
+## Not counting vars for the runtime - OCAMLRUN, NEW_OCAMLRUN.
+
+## Hopefully OBazl can clean this up. Bazel does not need such
+## variables, since the build tools are encoded in the toolchains, and
+## build commands are encoded in the rules. So the main issue is a
+## matter of passing the right arguments via rule attributes.
+
+# OCAMLRUN: set to boot/ocamlrun, which is the initial version
+# compiled with the boot compiler boot/ocamlc.
+# May be overridden on cmd line, as in target 'library-cross' in
+# Makefile:
+#	$(MAKE) -C stdlib OCAMLRUN=../runtime/ocamlrun$(EXE) all
+#
+# NEW_OCAMLRUN: constant runtime/ocamlrun
+#
+## OBazl: one build target (//boot:ocamlrun) for the initial
+## (bootstrap) runtime (boot/ocamlrun, copied from runtime/ocamlrun),
+## another (//bin:ocamlrun) for any updated runtime (i.e. if runtime
+## sources change). This a bootstrap toolchain using //boot:ocamlrun
+## (the inital runtime), and a separate tool chain using the new
+## runtime in //bin:ocamlrun.
+
+# COMPILER: ./ocamlc (i.e. newly built vm>vm compiler)
+# OPTCOMPILER: ./ocamlopt (i.e.  newly built compiler vm>sys compiler)
+#
+## OBazl: targets for building new compilers are //bin:ocamlc,
+## //bin:ocamlopt
+
+# BOOT_OCAMLC: boot/ocamlc.opt (sys>vm) if available (and newer than
+#   boot/ocamlc), otherwise boot/ocamlc (vm>vm)
+#
+## OBazl: no need. Target //boot:ocamlc delivers the vm>vm boot
+## compiler. Build target //boot:ocamlc, with
+## --host_platform=//platforms/build:sys and
+## --platforms=//platforms/target:vm delivers the initial sys>vm
+## compiler.
+
+# CAMLC: a mess. the idea seems to be: use a *>vm compiler. Could be
+# the boot vm>vm compiler, the initial sys>vm compiler, or a local >vm
+# compiler.  Compile actions use CAMLC, which may be set in various ways.
+
+## Bzl: choice of compiler to use for a build action is controlled by
+## target host setting (which can be set by passing a platform arg).
+## So for example the stdlib target defaults to the vm>vm bootstrap
+## toolchain. If you want to build stdlib with the sys>vm compiler,
+## pass --//platforms/target:sys and --//platforms/xtarget:vm.
+
+# Makefile:
+## CAMLC = $(BOOT_OCAMLC) $(BOOT_STDLIBFLAGS) -use-prims runtime/primitives
+## Overridden for some targets, e.g. coldstart:
+##   CAMLC='$$(BOOT_OCAMLC) $(USE_RUNTIME_PRIMS)'
+##    NB: USE_RUNTIME_PRIMS == -use-prims ../runtime/primitives
+# stdlib: CAMLC=$(OCAMLRUN) $(COMPILER)
+# tools:  CAMLC = $(BOOT_OCAMLC) $(BOOT_STDLIBFLAGS) -g \
+#           -use-prims $(ROOTDIR)/runtime/primitives -I $(ROOTDIR)
+##  Makefile.common: BOOT_STDLIBFLAGS ?= -nostdlib -I $(ROOTDIR)/boot
+## NB: for the last to work, BOOT_OCAMLC must be sys>vm (ocamlc.opt)
+
+# CAMLOPT: runs vm>sys compiler
+# Defined in:
+# Makefile:
+## CAMLOPT=$(OCAMLRUN) ./ocamlopt$(EXE) $(STDLIBFLAGS) -I otherlibs/dynlink
+# tools/Makefile:
+## CAMLOPT = $(OCAMLRUN) $(ROOTDIR)/ocamlopt$(EXE) $(STDLIBFLAGS) -g
+# stdlib/Makefile:
+##  CAMLOPT=$(OCAMLRUN) $(OPTCOMPILER)
+# otherlibs/Makefile.otherlibs.common
+## CAMLOPT := $(BEST_OCAMLOPT) $(STDLIBFLAGS)
+# otherlibs/systhread/Makefile
+## CAMLOPT=$(BEST_OCAMLOPT) $(LIBS)
+
+
+# CAMLOPT_CMD: for sys>* builds
+# Defined in Makefile.common: CAMLOPT_CMD = $(CAMLOPT)
+
+# CAMLOPT_CMD: Makefile.common:  OCAMLOPT_CMD = $(OCAMLOPT)
+
+# OCAMLOPT:
+## Makefile: windows only, for flexlink stuff
+## otherlibs/dynlink/Makefile: OCAMLOPT=$(BEST_OCAMLOPT) $(STDLIBFLAGS) -g
+## set and used in testsuite subdirs:
+##   OCAMLOPT ?= $(BEST_OCAMLOPT) $(STDLIBFLAGS)
+
+# BEST_OCAMLC: Makefile.best_binaries
+#   BEST_OCAMLC := $(call choose_best,ocamlc)
+## Seems odd. if you want a sys.* compiler, just build it (depend on it).
+## choose_best: returns sys>* if available else vm>*
+##   if USE_BEST_BINARIES (default: true) and $(ROOTDIR)/$1.opt not stale
+##   then $(ROOTDIR)/$1.opt
+##   else $(OCAMLRUN) $(ROOTDIR)/$1
+
+## Why do we need this choose_best function? Maybe because in the
+## legacy system we can build the various compilers separately. So it
+## is possible to have built both a sys>vm and a vm>vm, but the latter
+## more recently, in which case it will be selected by choose_best.
+
+## Under Bazel this would not make sense. You can build the different
+## compiler flavors (vm>sys, sys>vm, etc.) separately, but whatever
+## you depend on will be compiled and delivered. And the toolchains
+## depend on the compilers. So if you use the sys>vm toolchain, that
+## compiler will be built automatically. IOW you select the compiler
+## to use by setting the target platform, which causes Bazel to select
+## the matching toolchain.
+
+# opts attrib:
+# bootstrap_module: OC_COMMON_CFLAGS, add OC_NATIVE_CFLAGS if target == sys
+# bootstrap_signature: OC_COMMON_CFLAGS for both vm and sys targets
+BOOT_OCAMLRUN = "//boot:ocamlrun"
+RUNTIME_OCAMLRUN = "//boot:ocamlrun"
+
+################################################################
+####  C Builds
 TOOLPREF = "@ac_tool_prefix@"
 CCOMPTYPE = "@ccomptype@"
 ccomp_type = "@ccomptype@"
@@ -57,8 +217,9 @@ c_compiler = "@CC@"
    # For programs that don't need compatibility with older OCaml releases
    # the recommended approach is to use the constituent variables
    # c_compiler, ocamlc_cflags, ocamlc_cppflags etc., directly.
-bytecomp_c_compiler = c_compiler + " " + ocamlc_cflags + " " + ocamlc_cppflags
-native_c_compiler = c_compiler + " " + ocamlopt_cflags + " " + ocamlopt_cppflags
+## OBazl does not need to support such backward compatibility?
+# bytecomp_c_compiler = c_compiler + " " + ocamlc_cflags + " " + ocamlc_cppflags
+# native_c_compiler = c_compiler + " " + ocamlopt_cflags + " " + ocamlopt_cppflags
 TOOLCHAIN = "@toolchain@"
 
 CC_HAS_DEBUG_PREFIX_MAP = "@cc_has_debug_prefix_map@" == "true"
@@ -74,19 +235,38 @@ as_has_debug_prefix_map = "@as_has_debug_prefix_map@" == "true"
 # 	$(CC) -c $(OC_CFLAGS) $(CFLAGS) $(OC_CPPFLAGS) $(CPPFLAGS) \
 # 	  $(OUTPUTOBJ)$@ $<
 # mac: "-O2 -fno-strict-aliasing -fwrapv -pthread -g -Wall -Werror -fno-common"
-# linux:
-OC_CFLAGS = "@oc_cflags@"
+# linux: "-O2 -fno-strict-aliasing -fwrapv -pthread -g -Wall -Werror -fno-common -fexcess-precision=standard -fno-tree-vrp -ffunction-sections"
+
+## WARNING: The legacy code conflates -g (build for debugger) and
+## -DDEBUG, which may mean other things - here, it means the runtime
+## must link instrtrace.c. Bazel makes a distinction: a `-c dbg` build
+## adds `-g` but not `-DDEBUG`. A `-c fastbuild` build (the default)
+## adds `-DDEBUG` but not `-g`. This makes sense considering DEBUG has
+## no intrinsic relation to the debugger.
+
+## The configure script puts both -O2 and -g in this var. For Bazel we
+## have command line args to control optimizations, so we remove those
+## here.
+def fix_oc_cflags(x):
+    if "-O2" in x:
+        x.remove("-O2")
+    if "-g" in x:
+        x.remove("-g")
+
+    return x
+
+OC_CFLAGS = fix_oc_cflags("@oc_cflags@".split(" "))
 
 # CFLAGS not used in Makefile. Used in Makefile.common, in the
 # generic rule for compiling C sources. Also used in:
 # - stdlib/Makefile to compile "HEADERPROGRAM" (header.c), which is
 #     "The launcher for bytecode executables (if #! is not working)"
 # - otherlibs/systhreads/Makefile, to compile st_stubs.[b|n].o
-# mac: empty
+# mac, linux: empty
 CFLAGS = "@CFLAGS@"
 
 # for compiling runtime files to sys target
-# mac: empty
+# mac: empty; linux: "-function-sections"
 OC_NATIVE_CFLAGS = "@oc_native_cflags@"
 
 ## not used in any Makefiles. stored in fld in Config module:
@@ -94,9 +274,9 @@ OC_NATIVE_CFLAGS = "@oc_native_cflags@"
 ## (** The flags ocamlc should pass to the C compiler *)
 ## IOW, these are not flags for building the compiler, they're flags
 ## the compiler uses to compile (e.g. when passed c source?)
-# ocamlc_cflags = "@ocamlc_cflags@"
+# ocamlc_cflags: unused
 
-## Unused:
+## Set in Makefile.config, but not used:
 # OCAMLC_CFLAGS = "@ocamlc_cflags@"
 
 # OC_CPPFLAGS used wherever OC_CFLAGS and CFLAGS used, in
@@ -105,13 +285,21 @@ OC_NATIVE_CFLAGS = "@oc_native_cflags@"
 # Also used in various otherlibs/[systhreads|unix]
 # In otherlibs/unix: OC_CPPFLAGS += -DCAML_BUILDING_UNIX
 # mac: oc_ccpflags == -D_FILE_OFFSET_BITS=64
-OC_CPPFLAGS = ["-I$(ROOTDIR)/runtime", "@oc_cppflags@"]
+## OC_CPPFLAGS = ["-I$(ROOTDIR)/runtime", "@oc_cppflags@"]
+OC_CPPFLAGS = ["@oc_cppflags@"]
+
+# configure:
+# oc_cppflags="$common_cppflags $internal_cppflags"
+# common_cppflags:
+#   all: -D_FILE_OFFSET_BITS=64 hardcoded, maybe some extras
+# internal_cppflags:
+#    all: ??
 
 # Used in generic C compile rule in Makefile.common,
 # also in Makefile for runtime/sak.exe
 # ocamltest/Makefile, summed with OC_CPPFLAGS
 # Also used in otherlibs/systhreads, for st_stubs.[b|n].o
-# mac: empty
+# mac, linux: empty
 CPPFLAGS = "@CPPFLAGS@"
 
 # Makefile, for preprocessing %.S sources. Undefined
@@ -136,10 +324,13 @@ OC_NATIVE_DEFINES = [
 # ocamlc_cppflags = "@ocamlc_cppflags@"
 
 # Unused:
-OCAMLC_CPPFLAGS = "@ocamlc_cppflags@"
+# OCAMLC_CPPFLAGS = "@ocamlc_cppflags@"
 
-## in Makefile. summed with OC_CPPFLAGS for the runtime .o files
-## for native (%.n.o, OC_CPPFLAGS summed with OC_NATIVE_CPPFLAGS
+# CAMLDLLIMPORT, IN_CAML_RUNTIME - single-use hardcoded defines.
+# Only used for std runtime source code (runtime/caml/domain_state.h)
+# defined in Makefile, not by ./configure.
+# summed with OC_CPPFLAGS for the runtime .o files
+# for native (%.n.o, OC_CPPFLAGS summed with OC_NATIVE_CPPFLAGS
 # runtime_CPPFLAGS = -DCAMLDLLIMPORT= -DIN_CAML_RUNTIME
 runtime_DEFINES = ["CAMLDLLIMPORT=", "IN_CAML_RUNTIME"]
 
@@ -147,36 +338,50 @@ runtime_DEFINES = ["CAMLDLLIMPORT=", "IN_CAML_RUNTIME"]
 ## in Makefile, summed with OC_CPPFLAGS for .bd.o files
 ## for .nd.o files: sum w/OC_NATIVE_CPPFLAGS, OC_CPPFLAGS
 ## also used for windows amd64.nt.d.obj, i386.nt.d.obj
-ocamlrund_CPPFLAGS = -DDEBUG
+## Bazel does not use this; it uses CLI build settings to
+## control compilation mode.
+# ocamlrund_CPPFLAGS = -DDEBUG
+# ocamlrund_DEFINES = ["DEBUG"]
 
-## in Makefile, summed with OC_CPPFLAGS for .bi.o files
+# CAML_INSTR - single-used, hardcoded in Makefile.
+## Summed with OC_CPPFLAGS for .bi.o files
 ## for .ni.o files: sum w/OC_NATIVE_CPPFLAGS, OC_CPPFLAGS
 ## also used for windows amd64.nt.i.obj, i386.nt.i.obj
-ocamlruni_CPPFLAGS = -DCAML_INSTR
+#ocamlruni_CPPFLAGS = -DCAML_INSTR
+# ocamlruni_DEFINES = ["CAML_INSTR"]
+# Bazel uses build setting --//boot/vm:instrumented
 
-# bzl: ocamlopt v. native?
-# "module" prefix? but there is no ocamlopt module?
-## bzl: ocamlopt_cflags not found in makefiles
-ocamlopt_cflags = "@ocamlc_cflags@"
-OCAMLOPT_CFLAGS = "@ocamlc_cflags@"
+## fld in utils:Config module; not used in makefile
+# ocamlopt_cflags = "@ocamlc_cflags@"
+
+## Set in Makefile.config, but not used:
+# OCAMLOPT_CFLAGS = "@ocamlc_cflags@"
+
 # #7678: ocamlopt uses these only to compile .c files, and the
 # #behaviour for the two drivers should be identical.
-# bzl: "drivers"?
-## bzl: ocamlopt_cppflags not found in makefiles
-OCAMLOPT_CPPFLAGS = "@ocamlc_cppflags@"
-ocamlopt_cppflags = "@ocamlc_cppflags@"
-## no OC_BYTE_CFLAGS?
+# set in Makefile.config, but not used
+# OCAMLOPT_CPPFLAGS = "@ocamlc_cppflags@"
 
-## bzl: used to compile *.bpic.$(O) files
+# fld in utils:Config
+# ocamlopt_cppflags = "@ocamlc_cppflags@"
+
+
+## Used to compile *.bpic.$(O) files
+# Set by configure, depending on sys
+# linux: -fPIC, mac: null
 SHAREDLIB_CFLAGS = "@sharedlib_cflags@"
 
 ### Additional link-time options
 # To support dynamic loading of shared libraries (they need to look at
 # our own symbols):
+
+# Set in Makefile.config, used in MKEXE, MKDLL, MKEXE_VIA_CC
+# mac: -Wl,-no_compact_unwind
+# linux: -Wl,-E
 OC_LDFLAGS = "@oc_ldflags@"
 
 
-# standard env var:
+# used in Makefile.config
 LDFLAGS = "@LDFLAGS@"
 
 ################################################################
@@ -201,7 +406,8 @@ ocamlyacc_WSTR_MODULE = "@ocamlyacc_wstr_module@"
 # for .cmx, COMPILE_NATIVE_MODULE uses OC_COMMON_CFLAGS and
 # OC_NATIVE_CFLAGS (which is empty)
 OC_COMMON_CFLAGS = [  ## OCaml compile flags
-    "-g", "-strict-sequence", "-principal", "-absname",
+    ## "-g",
+    "-strict-sequence", "-principal", "-absname",
     "-w", "+a-4-9-40-41-42-44-45-48", "-warn-error", "+a", "-bin-annot",
     "-strict-formats"
 ]
@@ -263,25 +469,41 @@ native_pack_linker = "@PACKLD@"
 
 ################################################################
 
-EMPTY=""
+## bzl: not needed?
+EMPTY = ""
+
 ## Arguments passed to the configure script
 CONFIGURE_ARGS = "@CONFIGURE_ARGS@"
 TOP_BUILDDIR = "@top_builddir@"
+
+################################
+## Bazel: building code, and packaging it for distribution, even
+## locally, are completely separate concerns. The build need not know
+## anything about where things are going to end up, so we disregard
+## the installation stuff.  It can be provided separately.
+
+## Exception: OCaml puts some of these paths into bytecode files.
+EXEC_PREFIX = "@exec_prefix@"
+LIBDIR = EXEC_PREFIX + "/lib/ocaml"
+
+ROOTDIR = "." ##FIXME
+
+
 ## Installation directories
-prefix = "@prefix@"
-exec_prefix = "@exec_prefix@"
-BINDIR = "@bindir@"
-datarootdir = "@datarootdir@"
-### Where to install the standard library
-LIBDIR = "@libdir@"
+# prefix = "@prefix@"
+# exec_prefix = "@exec_prefix@"
+# BINDIR = "@bindir@"
+# datarootdir = "@datarootdir@"
+# ### Where to install the standard library
+# LIBDIR = "@libdir@"
 ### Where to install the stub code for the standard library
-STUBLIBDIR = "@libdir@/stublibs"
+# STUBLIBDIR = "@libdir@/stublibs"
 ### Where to install the man pages
 # Man pages for commands go in $(MANDIR)/man1
 # Man pages for the library go in $(MANDIR)/man3
-MANDIR = "@mandir@"
-PROGRAMS_MAN_DIR="@mandir@/man1"
-LIBRARIES_MAN_DIR="@mandir@/man3"
+# MANDIR = "@mandir@"
+# PROGRAMS_MAN_DIR="@mandir@/man1"
+# LIBRARIES_MAN_DIR="@mandir@/man3"
 
 ### Do #! scripts work on your system?
 ### Beware: on some systems (e.g. SunOS 4), this will work only if
@@ -306,47 +528,6 @@ A = "@libext@"
 EXT_LIB= ".@libext@"
 ext_lib = "." + "@libext@"
 
-############# Configuration for the native-code compiler
-
-### Whether the native compiler has been enabled or not
-NATIVE_COMPILER = "@native_compiler@" == "true"
-
-### Name of architecture for the native-code compiler
-### Currently supported:
-###
-### i386        Intel Pentium PCs under Linux, *BSD*, NextStep
-### power       Macintosh under Mac OS X and Linux
-### arm         ARM under Linux
-###
-### Set ARCH=none if your machine is not supported
-ARCH = "@arch@" == "true"
-
-# Whether the architecture has 64 bits
-ARCH64 = "@arch64@"
-
-# Endianness for this architecture
-ENDIANNESS = "@endianness@"
-
-### Name of architecture model for the native-code compiler.
-### Some architectures come in several slightly different flavors
-### that share a common code generator. This variable tailors the
-### behavior of the code generator to the particular flavor used.
-### Currently needed only if ARCH=power; leave MODEL=default for
-### other architectures.
-### If ARCH=power: set MODEL=ppc
-### For other architectures: leave MODEL=default
-###
-MODEL = "@model@"
-
-### Name of operating system family for the native-code compiler.
-SYSTEM = "@system@"
-
-TARGET = "@target@"
-HOST = "@host@"
-
-### Set to "true" to install ".byte" executables (ocamlc.byte, etc.)
-INSTALL_BYTECODE_PROGRAMS = "@install_bytecode_programs@" == "true"
-
 ############# Configuration for the contributed libraries
 
 ### Which libraries to compile and install
@@ -361,19 +542,30 @@ UNIX_OR_WIN32 = "@unix_or_win32@"
 INSTALL_SOURCE_ARTIFACTS = "@install_source_artifacts@" == "true"
 
 BYTECCLIBS = "@bytecclibs@"
-bytecomp_c_libraries = "@bytecclibs@"
+VM_LIBDEPS = "@bytecclibs@"
+# fld in utils:Config - bytecomp_c_libraries = "@bytecclibs@"
 NATIVECCLIBS = "@nativecclibs@"
-native_c_libraries = "@nativecclibs@"
+SYS_LIBDEPS = "@nativecclibs@"
+# fld in utils:Config - native_c_libraries = "@nativecclibs@"
 
 EXE = "@exeext@"
 ext_exe = "@exeext@"
 
-OUTPUTEXE = "@outputexe@$(EMPTY)"
+OUTPUTEXE = "@outputexe@ " + EMPTY
 
 SYSLIB = "@syslib@"
 MKLIB = "@mklib@"
 SYSTHREAD_SUPPORT = "@systhread_support@" == "true"
 CMXS = "@cmxs@"
+
+################################################################
+# Hardcoded in Makefile, used to construct build cmds:
+## NB: rules must add attr: data = ["//runtime:primitives"],
+PRIMITIVES = "//runtime:primitives"
+DATA_PRIMS = [PRIMITIVES]
+USE_RUNTIME_PRIMS = ["-use-prims", PRIMITIVES]
+
+USE_STDLIB = ["-nostdlib", "-I", "../stdlib"]
 
 ################################################################
 ##  Flexlink stuff
@@ -389,8 +581,15 @@ OC_EXE_LDFLAGS = "@oc_exe_ldflags@"
 FLEXDLL_CHAIN = "@flexdll_chain@"
 FLEXLINK_FLAGS = "@flexlink_flags@"
 
-## Bazel: we don't use these mk* vars. They start with the CC tool;
-## Bazel rules handle that, we only need to construct the args.
+## from the configure script:
+# Command to build executables
+# Ultimately, MKEXE may build an executable using the C compiler or it may use
+# a wrapper for a linker (i.e. flexlink). The build system must therefore not
+# rely on $CFLAGS because these cannot be processed by flexlink (and are not
+# passed)
+
+## Bazel: we don't use these mk* vars since we use cc_binary rules to
+## build executables.
 mkdll, mkexe, mkmaindll = (
     "@mkdll_exp@",
     "@mkexe_exp@",
