--- a/lex/BUILD.bazel
+++ b/lex/BUILD.bazel
@@ -28,7 +28,7 @@ load("//bzl:rules.bzl",
 # We implement it in the toolchain used by bootstrap_ocamllex
 
 
-load("//config:BUILD.bzl", "ROOT_MODULE_OPTS", "ROOT_SIG_OPTS")
+load("//config:CONFIG.bzl", "ROOT_MODULE_OPTS", "ROOT_SIG_OPTS")
 
 MODULE_OPTS = ROOT_MODULE_OPTS
 SIG_OPTS = ROOT_SIG_OPTS
