--- a/otherlibs/systhreads/BUILD.bazel
+++ b/otherlibs/systhreads/BUILD.bazel
@@ -5,7 +5,7 @@ load("//bzl:rules.bzl",
      "bootstrap_signature",
 )
 
-load("//config:BUILD.bzl",
+load("//config:CONFIG.bzl",
      "ARCH", "MODEL", "SYSTEM",
      "HOST", "ROOTDIR", "LIBDIR",
      "OC_CFLAGS", "CFLAGS",
