--- a/parsing/BUILD.bazel
+++ b/parsing/BUILD.bazel
@@ -6,7 +6,7 @@ load("//bzl:rules.bzl",
      "bootstrap_ocamlyacc",
 )
 
-load("//config:BUILD.bzl",
+load("//config:CONFIG.bzl",
      "ROOT_MODULE_OPTS",
      "ROOT_SIG_OPTS",
      "PRIMITIVES"
