--- a/toolchain/selectors/BUILD.bazel
+++ b/toolchain/selectors/BUILD.bazel
@@ -8,6 +8,13 @@ exports_files(glob(["*.bazel"]))
 toolchain_selector(
     name           = "bootstrap",
     toolchain = "//toolchain/adapters:bootstrap",
+    # build_host_constraints  = [
+    #     "//platforms/build:vm?"
+    # ],
+    # target_host_constraints  = [
+    #     "//platforms/target:vm?",
+    # ],
+    # toolchain_constraints = ["//runtime:bootstrap?"],
 )
 
 ##########
