--- a/toplevel/BUILD.bazel
+++ b/toplevel/BUILD.bazel
@@ -8,7 +8,7 @@ load("//bzl:rules.bzl",
      "bootstrap_test",
 )
 
-load("//config:BUILD.bzl",
+load("//config:CONFIG.bzl",
      "ROOT_MODULE_OPTS",
      "ROOT_SIG_OPTS"
      )
