--- a/typing/BUILD.bazel
+++ b/typing/BUILD.bazel
@@ -3,7 +3,7 @@ load("//bzl:rules.bzl",
      "bootstrap_library",
      "bootstrap_signature")
 
-load("//config:BUILD.bzl",
+load("//config:CONFIG.bzl",
      "ROOT_MODULE_OPTS",
      "ROOT_SIG_OPTS",
      "PRIMITIVES"
