--- a/utils/BUILD.bazel
+++ b/utils/BUILD.bazel
@@ -6,7 +6,7 @@ load("//bzl:rules.bzl",
      "bootstrap_signature",
 )
 
-load("//config:BUILD.bzl",
+load("//config:CONFIG.bzl",
      "CPP",
      "USE_PRIMS", "DATA_PRIMS",
      "ROOT_MODULE_OPTS",
