--- a/yacc/BUILD.bazel
+++ b/yacc/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//config:BUILD.bzl",
+load("//config:CONFIG.bzl",
      "OC_CFLAGS", "CFLAGS", "OC_LDFLAGS", "LDFLAGS")
 
 # gcc -O2 -fno-strict-aliasing -fwrapv -pthread -Wall -Wdeclaration-after-statement -Werror -fno-common    -Wl,-no_compact_unwind -o ocamlyacc closure.o error.o lalr.o lr0.o main.o mkpar.o output.o reader.o skeleton.o symtab.o verbose.o warshall.o
