--- a/bzl/toolchain/BUILD.bazel
+++ b/bzl/toolchain/BUILD.bazel
@@ -13,14 +13,14 @@ package(default_visibility = ["//visibility:public"])
 
 # label_flag(
 #     name = "boot.ocamlc",
-#     build_setting_default = "//boot:ocamlc"
+#     build_setting_default = "//boot/bin:ocamlc"
 #     # build_setting_default = "//runtime:ocamlc"
 # )
 
 ## may be changed by transition
 label_flag(
     name = "ocamlc",
-    build_setting_default = "//boot:ocamlc"
+    build_setting_default = "//boot/bin:ocamlc"
     # build_setting_default = "//runtime:ocamlc"
 )
 
